# go-touch-grass

./: .gitignore  LICENSE  README.md  pyproject.toml  touch_grass.py
src/go_touch_grass/: cli.py  config.py  database.py  tracker.py
src/go_touch_grass/outputs/: console.py  discord.py  file.py
src/scripts/: console_cli.py  discord_cli.py  file_cli.py
tests/: conftest.py  test_discord.py  test_file.py  test_tracker.py
